# Veyron

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELIABILITY.md  ROADMAP.md  benchmark_runner.py  config.example.yaml  package-lock.json  package.json  playwright-verify.cjs  pyproject.toml  validate_milestones.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: README.md
backend/: requirements.txt
backend/paios/: __init__.py  config.py  main.py
backend/paios/api/: auth.py  middleware.py  schemas.py  websocket.py
backend/paios/core/: agent.py  context.py  evaluator.py  events.py  intelligence.py  planner.py  reflection.py  task_manager.py  tracker.py
backend/paios/db/: base.py  models.py
backend/paios/intelligence/: __init__.py  benchmark.py  train.py
backend/paios/llm/: base.py  ollama.py
backend/paios/memory/: __init__.py  lifecycle.py  scoring.py  store.py
backend/paios/scripts/: validate_ollama.py
backend/paios/security/: __init__.py  audit.py  command_policy.py  confirmations.py  path_policy.py  policy.py
backend/paios/tools/: base.py  filesystem_read.py  project_analyzer.py  registry.py  system_monitor.py  terminal.py
backend/plugins/: example_tool_plugin.py
backend/veyron/: __init__.py  config.py  main.py
backend/veyron/api/: auth.py  middleware.py  websocket.py
backend/veyron/core/: agent.py  context.py  planner.py  reflection.py  task_manager.py  tracker.py
backend/veyron/db/: base.py  models.py
backend/veyron/evaluation/: __init__.py  evaluator_v2.py  failure_analysis.py  regression.py  reporting.py  tool_intelligence.py
backend/veyron/intelligence/: observability.py  scheduler.py
backend/veyron/learning/: skill_detector.py  skill_store.py
backend/veyron/llm/: base.py  ollama.py  remote.py
backend/veyron/memory/: __init__.py  importance.py  lifecycle.py  merge.py  scoring.py  store.py  summarization.py  user_profile.py
backend/veyron/monitor/: __init__.py  cache.py  collectors.py  service.py  snapshot.py
backend/veyron/plugin/: registry.py  sdk.py
backend/veyron/tools/: system_monitor.py  terminal.py
backend/veyron/workflow/: engine.py  models.py  registry.py
benchmarks/: README.md  __init__.py  intelligence_benchmark.py  perf.py  runner.py  tasks.py
docs/: TESTING.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: http.rs  launcher.rs  lib.rs  tray.rs  updater.rs
frontend/src/api/: client.ts  types.ts  websocket.ts
frontend/src/hooks/: useAsync.ts  useInterval.ts  useWebSocket.ts
scripts/: build_backend.py  release.py  sign_update.py  verify_environment.py
tests/: conftest.py
tests/benchmarks/: test_learning_progress.py  test_memory_quality.py  test_reflection_quality.py  test_skill_detection.py  test_workflow_prediction.py
tests/integration/: test_agent_e2e.py  test_process_pipeline.py
tests/unit/: test_adversarial.py  test_audit.py  test_command_policy.py  test_confirmations.py  test_context.py  test_dashboard.py  test_evaluation_v2.py  test_evaluator.py  test_events.py  test_history_extractor.py  test_intelligence_benchmark.py  test_intelligence_layer.py  test_intent_classifier.py  test_memory_store.py  test_path_policy.py  test_phase10.py  test_phase13.py  test_phase9_4.py  test_planner.py  test_project_analyzer.py  test_reflection.py  test_registry.py  test_router.py  test_safety_policy.py  test_task_manager.py  test_tool_reliability.py  test_tool_selector.py  test_tools_filesystem.py  test_tools_system_monitor.py  test_tools_terminal.py  test_tracker.py  test_training_preparation.py  test_update.py  test_websocket.py
(+74 files in other folders)
