[project]
name = "veyron"
version = "1.0.0"
description = "Veyron — AI Productivity System. A local agent runtime with memory, tools, and a mission-control UI."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Veyron" }]

dependencies = [
    # Retry logic for LLM calls
    "tenacity>=9.0.0",
    # MLflow experiment tracking
    "mlflow>=2.16.0",
    # Web / API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",

    # Validation / settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "PyYAML>=6.0",

    # Database
    "SQLAlchemy>=2.0.35",
    "SQLModel>=0.0.22",
    "aiosqlite>=0.20.0",

    # System
    "psutil>=6.0.0",

    # HTTP client (Ollama, future providers)
    "httpx>=0.27.0",

    # Logging
    "structlog>=24.4.0",
]

[project.scripts]
veyron = "veyron.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/veyron"]

[project.optional-dependencies]
ml = [
    # Phase 2 micro-models
    "scikit-learn>=1.5.0",
    "numpy>=1.26",
]
vector = [
    # Phase 2 semantic memory
    "chromadb>=0.5.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
