[package]
name = "veyron-desktop"
version = "1.0.1"
description = "Veyron AI Desktop — local AI productivity system"
authors = ["Veyron"]
edition = "2021"

[lib]
name = "veyron_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
